# tasks-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
tasks_cli/: __init__.py  __main__.py  cache.py  config.py  i18n.py  tag_store.py
tasks_cli/cli/: completions.py  main.py  sync.py  tasks.py  utils.py
tasks_cli/db/: __init__.py  base.py  postgres.py  sqlalchemy_repo.py  sqlite.py
tasks_cli/db/migrations/: 001_initial.sql
tasks_cli/db/migrations/alembic/: env.py
tasks_cli/db/migrations/alembic/versions/: 001_initial_schema.py
tasks_cli/models/: __init__.py  task.py
tasks_cli/sync/: __init__.py  engine.py  resolver.py
tasks_cli/tui/: app.py
tests/: conftest.py
tests/integration/: test_sqlite_repo.py  test_sync_engine.py
tests/unit/: test_cli.py  test_models.py
